crates/simplexpr/src/snapshots/simplexpr__tests__test-14.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"1 + (true ? 2 : 5) + 2\"))"

---
Ok(
    BinOp(
        BinOp(
            Literal(
                "1",
            ),
            Plus,
            IfElse(
                Literal(
                    "true",
                ),
                Literal(
                    "2",
                ),
                Literal(
                    "5",
                ),
            ),
        ),
        Plus,
        Literal(
            "2",
        ),
    ),
)
