crates/simplexpr/src/snapshots/simplexpr__tests__test-15.snap
---
source: src/lib.rs
expression: "Lexer::new(\"foo(1, 2)\").filter_map(|x|\n                                       x.ok()).map(|(_, x, _)|\n                                                       match x {\n                                                           Token::Ident(x) |\n                                                           Token::NumLit(x) |\n                                                           Token::StrLit(x) =>\n                                                           format!(\"{}\", x),\n                                                           x =>\n                                                           format!(\"{}\", x),\n                                                       }).collect::<Vec<_>>()"

---
[
    "foo",
    "LPren",
    "1",
    "Comma",
    "2",
    "RPren",
]
