crates/simplexpr/src/snapshots/simplexpr__tests__test-16.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"foo(1, 2)\"))"

---
Ok(
    FunctionCall(
        "foo",
        [
            Literal(
                "1",
            ),
            Literal(
                "2",
            ),
        ],
    ),
)
