crates/simplexpr/src/snapshots/simplexpr__tests__test-18.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"! false || ! true\"))"

---
Ok(
    BinOp(
        UnaryOp(
            Not,
            Literal(
                "false",
            ),
        ),
        Or,
        UnaryOp(
            Not,
            Literal(
                "true",
            ),
        ),
    ),
)
