crates/simplexpr/src/snapshots/simplexpr__tests__test-21.snap
---
source: src/lib.rs
expression: "Lexer::new(\"hi[\\\"ho\\\"]\").filter_map(|x|\n                                        x.ok()).map(|(_, x, _)|\n                                                        match x {\n                                                            Token::Ident(x) |\n                                                            Token::NumLit(x) |\n                                                            Token::StrLit(x)\n                                                            =>\n                                                            format!(\"{}\", x),\n                                                            x =>\n                                                            format!(\"{}\", x),\n                                                        }).collect::<Vec<_>>()"

---
[
    "hi",
    "LBrack",
    "\"ho\"",
    "RBrack",
]
